Bounce of walls, gameStart

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h2>MEMBER FLASH PLAYER?</h2>
+    <!-- <h2>MEMBER FLASH PLAYER?</h2> -->
     <canvas id="canvas"></canvas>
     <script src="mixup.js"></script>
 
