highscore board(not complete), working score, sound volumes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
 
 <body>
 
-    <!-- <h2>MEMBER FLASH PLAYER?</h2> -->
+    <h2>MEMBER FLASH PLAYER?</h2>
     <canvas id="canvas"></canvas>
     <script src="mixup.js"></script>
+    <div id="highscore">
+        <h3>Highscore</h3>
+        <ol>
+            <li id="first"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </div>
 
 </body>
 
