--- a/index.html
+++ b/index.html
@@ -13,16 +13,10 @@
 
     <h2>MEMBER FLASH PLAYER?</h2>
     <canvas id="canvas"></canvas>
+    
+    <script src="mixup.js">
 
-    <div id="highscore">
-        <h3>Highscore</h3>
-        <ol>
-            <li id="first">120</li>
-            <li id="second">80</li>
-            <li id="third">70</li>
-        </ol>
-    </div>
-    <script src="mixup.js"></script>
+    </script>
 
 </body>
 
