--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 
     <h2>MEMBER FLASH PLAYER?</h2>
     <canvas id="canvas"></canvas>
-    
+    <div id="menu">
+        <ul>
+            <li><button type="button">Spila</li></button>
+            <li><button type="button">Highscore</li></button>
+        </ul>
+    </div>
+
+    <div id="highscore">
+        <h3>Highscore</h3>
+        <ol>
+            <li id="first">120</li>
+            <li id="second">80</li>
+            <li id="third">70</li>
+        </ol>
+    </div>
     <script src="mixup.js">
 
     </script>
